# Tesseron

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  ReadMe.txt  image  index.html  params.json  travis.yml~
src/: main.launch
src/base_catkin/: CMakeLists.txt  package.xml
src/base_catkin/cfg/: wheels.xml
src/base_catkin/launch/: base.launch  comm.launch
src/base_catkin/msg/: BaseStatus.msg
src/base_catkin/src/: BaseCommunicator.cpp  BaseCommunicator.h  base (copy).cpp  base.cpp
src/base_catkin/srv/: Wheel.srv
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: listener.cpp
src/gripper/: CMakeLists.txt  controller_manager.launch  gripper  package.xml  pan.yaml  run  tilt.yaml
src/gripper/cfg/: mx.yaml  solenoid.xml  tilt.yaml
src/gripper/config/: gripper.xml  gripper.xml~
src/gripper/launch/: MX.launch  RX.launch  code.launch  controller_manager.launch  dyna.launch  dynamixel.launch  gripper.launch  spindle.launch  tilt.launch
src/gripper/msg/: Speed.msg  StatusMessage.msg
src/gripper/src/: DynamixelMotor.cpp  DynamixelMotor.h  Glue.cpp  Glue.h  Gripper.cpp  Gripper.h  Threemxl.cpp  Threemxl.h
src/gripper/srv/: LayDown.srv  MoveGripper.srv
src/subscription/: CMakeLists.txt  package.xml
src/subscription/src/: subscriber2.cpp
src/supervisor/: CMakeLists.txt  package.xml
src/supervisor/src/: ImageReader.cpp  (+6 more)
src/testPacl/: CMakeLists.txt  Poublisher.cpp  Poublisher.h  Publisher.cpp  Publisher.h  package.xml
src/three_mxl/: CMakeLists.txt  package.xmlol
src/webcam/: CMakeLists.txt  package.xml
(+55 files in other folders)
